--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flutter_local_notifications_test">
+   <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
    <application
         android:label="flutter_local_notifications_test"
         android:name="${applicationName}"
