--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_background_service: ^2.4.6
+  flutter_local_notifications: ^14.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
