--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  rxdart: ^0.27.7
   flutter_background_service: ^2.4.6
   flutter_local_notifications: ^14.1.0
 
