--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   rxdart: ^0.27.7
-  flutter_background_service: ^2.4.6
+  workmanager: ^0.5.1
   flutter_local_notifications: ^14.1.0
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
