--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   workmanager: ^0.5.1
   flutter_local_notifications: ^14.1.0
   http: ^0.13.4
+  flutter_secure_storage: ^7.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
